ingress-template.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01

spec:
  tls:
  - hosts:
    - example.fabijanbajo.com
    secretName: tls-secret
  rules:
  - host: example.fabijanbajo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: app
          servicePort: 80
